Update majeur #3
Ajout de la class Chapter_1 / Appli_Save / Card_Skel / Monstre et Credit

* Chapter_1
Première scène avec boite de dialogue et image de fond.

* Appli_Save
Modification du système de sauvegarde afin que les paramètres option de l'application sois prise en compte (j'ai préféré séparé les paramètres application et celle du jeu afin d'éviter une surcharge de travail et simplifié le code).

* Credit
Ajout des crédits de remerciement pour les personnes ayant aidé / participé au projet.

*Card_Skel
Ajout du squelette des cartes Monstre / Magie et Leader avec ces éléments :  Nom de carte / Coût mana / Attaque / Défense / Catégorie / Type et Image lié.

*Monstre
Création de deux cartes monstre.

Mise à jour de la class Liste_Carte

* Liste_Carte
Ajout de la première box du jeu avec ces cartes qui lui seront associé, on peut voir l'image de la carte ainsi que sa description.

Mise à jour du run.bat (attention, il se peut que la class Main_Menu ne sois pas trouvé)